--- a/app/src/main/res/layout/fragment_withdraw_create.xml
+++ b/app/src/main/res/layout/fragment_withdraw_create.xml
@@ -265,6 +265,7 @@
             android:hint="@string/enter_amount"
             android:textColorHint="@color/gray_profile"
             android:textSize="13sp"
+            app:errorTextAppearance="@style/ErrorAppearance"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sum_tv">
