--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="lightGray">#ddd</color>
     <color name="transparentGray">#1EDDDDDD</color>
     <color name="buttons_dark_background">#14141A</color>
+    <color name="error_red_color">#AE4C4C</color>
 
     <color name="gray_intro_text">#CAD0D2</color>
     <color name="login_background">#101017</color>
