--- a/app/src/main/res/layout/fragment_write_message.xml
+++ b/app/src/main/res/layout/fragment_write_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/login_background">
+    android:background="@color/main_background">
 
     <ImageView
         android:id="@+id/back_arrow"
@@ -24,7 +24,7 @@
         android:layout_marginStart="20dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/write_to_us"
-        android:textColor="@color/gray_intro_text"
+        android:textColor="@color/balance_fuel_gray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
         app:layout_constraintStart_toEndOf="@+id/back_arrow"
