--- a/app/src/main/res/layout/empty_withdraws_screen.xml
+++ b/app/src/main/res/layout/empty_withdraws_screen.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/login_background">
+    android:background="@color/main_background">
 
     <ImageView
         android:id="@+id/back_arrow_empty"
