--- a/app/src/main/res/layout/item_withdraw_date.xml
+++ b/app/src/main/res/layout/item_withdraw_date.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/login_background">
+    android:background="@color/main_background">
 
     <TextView
         android:id="@+id/date"
