--- a/app/src/main/res/layout/item_sent_message.xml
+++ b/app/src/main/res/layout/item_sent_message.xml
@@ -22,7 +22,7 @@
         android:layout_marginTop="18dp"
         android:layout_marginEnd="@dimen/margin_32dp"
         android:background="@drawable/bg_message"
-        app:layout_constraintBottom_toBottomOf="@+id/date_time_tv"
+        app:layout_constraintBottom_toBottomOf="@+id/sent_date_time_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/sent_triangle"
         app:layout_constraintTop_toTopOf="parent" />
@@ -53,7 +53,7 @@
         tools:text="Проблема с выводом денег" />
 
     <TextView
-        android:id="@+id/message_tv"
+        android:id="@+id/sent_message_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
@@ -67,7 +67,7 @@
         tools:text="@string/daily_withdrawal_dialog_message" />
 
     <TextView
-        android:id="@+id/date_time_tv"
+        android:id="@+id/sent_date_time_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
@@ -76,7 +76,7 @@
         android:paddingBottom="18dp"
         android:textColor="@color/gray_profile"
         app:layout_constraintStart_toStartOf="@+id/background"
-        app:layout_constraintTop_toBottomOf="@+id/message_tv"
+        app:layout_constraintTop_toBottomOf="@+id/sent_message_tv"
         tools:text="14:00, 8 окт. 2019г." />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
