--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
 
     <color name="gray_intro_text">#CAD0D2</color>
     <color name="main_background">#101017</color>
+    <color name="profile_background">#151414</color>
+    <color name="keyboard_background">#201E1E</color>
     <color name="continue_color">#23252D</color>
     <color name="agreement_text_color">#C1C1C1</color>
     <color name="gray_application_text">#61636F</color>
