--- a/app/src/main/res/drawable/bg_keyboard_button.xml
+++ b/app/src/main/res/drawable/bg_keyboard_button.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@color/gray_application_text" android:state_pressed="true" />
-    <item android:drawable="@color/colorPrimary" android:state_focused="true" />
-    <item android:drawable="@color/colorPrimary" />
+    <item android:drawable="@color/keyboard_background" android:state_focused="true" />
+    <item android:drawable="@color/keyboard_background" />
 
 </selector>
