--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_background"
+    android:background="@color/profile_background"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -46,9 +46,10 @@
             android:id="@+id/number_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_4dp"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/gray_profile"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name_tv"
@@ -59,13 +60,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16dp"
-            android:fontFamily="sans-serif-medium"
             android:textColor="@color/gray_intro_text"
-            android:textSize="48sp"
+            android:textSize="30sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/number_tv"
-            tools:text="4 500 ₽" />
+            tools:text="14 500.00 ₽" />
 
         <TextView
             android:id="@+id/balance_view"
@@ -73,15 +74,13 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="@dimen/margin_16dp"
-            android:background="@drawable/bg_profile_gradient"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
+            android:paddingEnd="20dp"
             android:text="@string/balance"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/balance_tv" />
 
@@ -91,15 +90,13 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="@dimen/margin_16dp"
-            android:background="@drawable/bg_profile_gradient"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
+            android:paddingEnd="20dp"
             android:text="@string/orders"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/balance_view" />
 
@@ -109,33 +106,29 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="@dimen/margin_16dp"
-            android:background="@drawable/bg_profile_gradient"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
+            android:paddingEnd="20dp"
             android:text="@string/withdrawal_applications"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/orders_view" />
 
         <TextView
             android:id="@+id/accounts_and_cards_view"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="@dimen/margin_16dp"
-            android:background="@drawable/bg_profile_gradient"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
+            android:paddingEnd="20dp"
             android:text="@string/accounts_and_cards"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/withdrawal_applications_view" />
 
@@ -145,15 +138,13 @@
             android:layout_height="74dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="@dimen/margin_16dp"
-            android:background="@drawable/bg_profile_gradient"
             android:fontFamily="sans-serif-medium"
             android:paddingStart="20dp"
             android:paddingTop="24dp"
+            android:paddingEnd="20dp"
             android:text="@string/support_service"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/accounts_and_cards_view" />
 
