--- a/app/src/main/res/layout/item_incoming_message.xml
+++ b/app/src/main/res/layout/item_incoming_message.xml
@@ -20,7 +20,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/margin_32dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="9dp"
         android:background="@drawable/bg_message"
         app:layout_constraintBottom_toBottomOf="@+id/date_time_tv"
         app:layout_constraintEnd_toStartOf="@+id/incoming_triangle"
