--- a/app/src/main/res/layout/item_sent_message.xml
+++ b/app/src/main/res/layout/item_sent_message.xml
@@ -19,8 +19,9 @@
         android:id="@+id/background"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="9dp"
         android:layout_marginEnd="@dimen/margin_32dp"
+        android:layout_marginBottom="9dp"
         android:background="@drawable/bg_message"
         app:layout_constraintBottom_toBottomOf="@+id/sent_date_time_tv"
         app:layout_constraintEnd_toEndOf="parent"
