--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -103,7 +103,9 @@
             app:destination="@id/supportFragment" />
         <action
             android:id="@+id/action_profileFragment_to_notificationsFragment"
-            app:destination="@id/notificationsFragment" />
+            app:destination="@id/notificationsFragment"
+            app:popEnterAnim="@animator/slide_in_top"
+            app:popExitAnim="@animator/slide_out_top" />
     </fragment>
 
     <fragment
@@ -116,6 +118,11 @@
         <action
             android:id="@+id/action_balanceFragment_to_fuelReplenishFragment"
             app:destination="@id/fuelReplenishFragment" />
+        <action
+            android:id="@+id/action_balanceFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment"
+            app:popEnterAnim="@animator/slide_in_top"
+            app:popExitAnim="@animator/slide_out_top" />
     </fragment>
 
     <fragment
@@ -134,6 +141,11 @@
             android:id="@+id/action_withdrawsFragment_to_accountsFragment"
             app:destination="@id/accountsFragment"
             app:popUpTo="@id/profileFragment" />
+        <action
+            android:id="@+id/action_withdrawsFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment"
+            app:popEnterAnim="@animator/slide_in_top"
+            app:popExitAnim="@animator/slide_out_top" />
     </fragment>
 
     <fragment
@@ -144,7 +156,13 @@
     <fragment
         android:id="@+id/accountsFragment"
         android:name="taxi.kassa.view.accounts.AccountsFragment"
-        android:label="AccountsFragment" />
+        android:label="AccountsFragment">
+        <action
+            android:id="@+id/action_accountsFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment"
+            app:popEnterAnim="@animator/slide_in_top"
+            app:popExitAnim="@animator/slide_out_top" />
+    </fragment>
 
     <fragment
         android:id="@+id/withdrawCreateFragment"
@@ -158,7 +176,13 @@
     <fragment
         android:id="@+id/ordersFragment"
         android:name="taxi.kassa.view.orders.OrdersFragment"
-        android:label="OrdersFragment" />
+        android:label="OrdersFragment">
+        <action
+            android:id="@+id/action_ordersFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment"
+            app:popEnterAnim="@animator/slide_in_top"
+            app:popExitAnim="@animator/slide_out_top" />
+    </fragment>
 
     <fragment
         android:id="@+id/supportFragment"
@@ -170,6 +194,11 @@
         <action
             android:id="@+id/action_supportFragment_to_chatHistoryFragment"
             app:destination="@id/chatHistoryFragment" />
+        <action
+            android:id="@+id/action_supportFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment"
+            app:popEnterAnim="@animator/slide_in_top"
+            app:popExitAnim="@animator/slide_out_top" />
     </fragment>
 
     <fragment
